--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@huggingface/inference": "^4.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-markdown": "^10.1.0"
+    "react-markdown": "^10.1.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
